# vscode-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
UIEngine/: BUILD  layout.hpp  mainwindow.cpp  mainwindow.hpp  robject.hpp
example_bin/: BUILD.bazel  example.cpp
parser/: BUILD  parser.cpp  parser.hpp
renderer/: BUILD  pipeline.cpp  pipeline.hpp
