load("@rules_cc//cc:defs.bzl", "cc_binary")


cc_binary(
    name = "example_bin",
    visibility = ["//visibility:public"],
    srcs = ["example.cpp"],
    deps = [
        # TODO: re-enable once satisfied with the results of the example build.
        "//third_party/glfw",
        "//third_party/glm",
        "@rules_vulkan//vulkan:vulkan_cc_library",
        "@bazel_tools//tools/cpp/runfiles",
        "//parser:parser"
    ],
    data=glob(["data/**"])
)
