load("@rules_cc//cc:defs.bzl", "cc_binary")


cc_binary(
    name = "example_bin",
    visibility = ["//visibility:public"],
    srcs = ["example.cpp"],
    deps = [
        # TODO: re-enable once satisfied with the results of the example build.
        "@bazel_tools//tools/cpp/runfiles",
        "//parser:parser",
        "//renderer:renderer",
        "@freetype//:freetype"
    ],
    data=glob(["data/**"])
)
